Refactor: Change text messages to english language

--- a/private/email_enroll_account.html
+++ b/private/email_enroll_account.html
@@ -1,6 +1,6 @@
 <html lang="es">
 <head>
-	<title>Se ha creado tu cuenta</title>
+	<title>Account has been created</title>
 </head>
 <body>
 <div width="100%" style="min-width: 100% !important; margin: 0 !important; padding: 0 !important;">
@@ -10,15 +10,15 @@
 			<td width="100%" style="min-width: 100%; font-family: Arial, Helvetica, sans-serif;">
 				<div style="position: relative;height: 350px;width: 650px;background-color: #01697d;padding: 20px 40px 20px 40px;border-radius: 0 0 80% 0;color: #ffffff;">
 					<div style="float: left;width: 60%;">
-						<h1 style="font-size: 40px; font-weight: normal; color: white;"><strong>Enhorabuena!</strong></h1>
-						<h2 style="opacity: .7; color: white;">Se ha creado tu cuenta en TheorySwe</h2>
+						<h1 style="font-size: 40px; font-weight: normal; color: white;"><strong>Congratulations!</strong></h1>
+						<h2 style="opacity: .7; color: white;">Your account has been created in Theory SWE</h2>
 					</div>
 					<div style="float: right;width: 40%;">
 						<img alt="car" style="position: relative;width: 280px;top: 70px;right: 30px;" src="{{productSrc}}">
 					</div>
 				</div>
 				<div style="position: relative;width: 650px;display: table;background-color: white;padding: 20px 40px 20px 40px;margin-bottom: 20px; font-family: Arial, Helvetica, sans-serif;">
-					<h3 style="font-weight: bold;margin-bottom: 0px;">Para establecer una contraseña, visita el siguiente link:</h3>
+					<h3 style="font-weight: bold;margin-bottom: 0px;">To set a password, visit the following link:</h3>
 					<a href="{{urlWithoutHash}}">
 						{{urlWithoutHash}}
 					</a>
