--- a/private/email_verify_email.html
+++ b/private/email_verify_email.html
@@ -1,6 +1,6 @@
 <html lang="es">
 <head>
-	<title>Verificar correo</title>
+	<title>Verify email</title>
 </head>
 <body>
 <div width="100%" style="min-width: 100% !important; margin: 0 !important; padding: 0 !important;">
@@ -10,18 +10,18 @@
 			<td width="100%" style="min-width: 100%; font-family: Arial, Helvetica, sans-serif;">
 				<div style="position: relative;height: 350px;width: 650px;background-color: #01697d;padding: 20px 40px 20px 40px;border-radius: 0 0 80% 0;color: #ffffff;">
 					<div style="float: left;width: 60%;">
-						<h1 style="font-size: 40px; font-weight: normal; color: white;">Verificar correo</h1>
+						<h1 style="font-size: 40px; font-weight: normal; color: white;">Verify email</h1>
 					</div>
 					<div style="float: right;width: 40%;">
 						<img alt="car" style="position: relative;width: 280px;top: 70px;right: 30px;" src="{{productSrc}}">
 					</div>
 				</div>
 				<div style="position: relative;width: 650px;display: table;background-color: white;padding: 20px 40px 20px 40px;margin-bottom: 20px; font-family: Arial, Helvetica, sans-serif;">
-					<h4>Para finalizar la creación de tu cuenta en TheorySwe, verifica tu correo en:</h4>
+					<h4>To finish updating your TheorySwe account, verify your email address at:</h4>
 					<a href="{{urlWithoutHash}}">
 						{{urlWithoutHash}}
 					</a>
-					<h4 style="font-weight: normal;"> Si no reconoces esta operación, por favor ignora este correo.</h4>
+					<h4 style="font-weight: normal;"> If you did not request this reset, please ignore this email.</h4>
 				</div>
 			</td>
 		</tr>
