Feat: Add mdi: prefix to icons, fix forgotpassword view

--- a/client/main.html
+++ b/client/main.html
@@ -3,8 +3,8 @@
 	<title>Theory SWE</title>
 	<meta name="description" content="Application which apply theoretical concepts about software engineering"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
-	<link href="https://cdn.jsdelivr.net/npm/@mdi/font@4.x/css/materialdesignicons.min.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp' rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="/css/base.css">
 </head>
 
