--- a/client/main.html
+++ b/client/main.html
@@ -1,7 +1,7 @@
 <head>
 	<meta charset="UTF-8">
-	<title>Theory SWE</title>
-	<meta name="description" content="Application which apply theoretical concepts about software engineering"/>
+	<title>Scaffold</title>
+	<meta name="description" content="Scaffold of Meteor app with Vue"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp' rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
